--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -21,3 +21,5 @@ AddType application/vnd.ms-excel.sheet.macroEnabled.12 xlsm
 AddType application/vnd.openxmlformats-officedocument.spreadsheetml.sheet xlsx
 AddType application/vnd.ms-excel.template.macroEnabled.12 xltm
 AddType application/vnd.openxmlformats-officedocument.spreadsheetml.template xltx
+
+AddType application/pdf .pdf 
